--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.47.0",
     "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "next": "13.2.1",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fontawesome": "^1.7.1",
-    "stripe": "^11.12.0"
+    "stripe": "^11.12.0",
+    "use-local-storage-state": "^18.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
