--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^1.47.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "mongoose": "^7.0.3",
     "next": "13.2.1",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
